// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OffsetConnectionType should create the connection SDL 1`] = `
"type Test {
  stringField: String!
  numberField: Float!
  boolField: Boolean!
}

type OffsetPageInfo {
  \\"\\"\\"true if paging forward and there are more records.\\"\\"\\"
  hasNextPage: Boolean

  \\"\\"\\"true if paging backwards and there are more records.\\"\\"\\"
  hasPreviousPage: Boolean
}

type TestOffsetConnection {
  \\"\\"\\"Paging information\\"\\"\\"
  pageInfo: OffsetPageInfo!

  \\"\\"\\"Array of nodes.\\"\\"\\"
  nodes: [Test!]!
}

\\"\\"\\"Cursor for paging through collections\\"\\"\\"
scalar ConnectionCursor

\\"\\"\\"
Relative date, an Epoch time (number), ISO Date string or a relative date value in the form of \\"last-[N]-[minutes | hours | days | weeks | months | years]\\"
\\"\\"\\"
scalar RelativeDate

type Query {
  test: TestOffsetConnection!
}"
`;

exports[`OffsetConnectionType should create the connection SDL with totalCount if enabled 1`] = `
"type Test {
  stringField: String!
  numberField: Float!
  boolField: Boolean!
}

type TestTotalCount {
  stringField: String!
}

type OffsetPageInfo {
  \\"\\"\\"true if paging forward and there are more records.\\"\\"\\"
  hasNextPage: Boolean

  \\"\\"\\"true if paging backwards and there are more records.\\"\\"\\"
  hasPreviousPage: Boolean
}

type TestTotalCountOffsetConnection {
  \\"\\"\\"Paging information\\"\\"\\"
  pageInfo: OffsetPageInfo!

  \\"\\"\\"Array of nodes.\\"\\"\\"
  nodes: [TestTotalCount!]!

  \\"\\"\\"Fetch total count of records\\"\\"\\"
  totalCount: Int!
}

\\"\\"\\"Cursor for paging through collections\\"\\"\\"
scalar ConnectionCursor

\\"\\"\\"
Relative date, an Epoch time (number), ISO Date string or a relative date value in the form of \\"last-[N]-[minutes | hours | days | weeks | months | years]\\"
\\"\\"\\"
scalar RelativeDate

type Query {
  test: TestTotalCountOffsetConnection!
}"
`;
